src/c7synt.output
Gramática

    0 $accept: begin $end

    1 begin: program

    2 program: declaration-list

    3 declaration-list: declaration-list declaration
    4                 | declaration

    5 declaration: function-definition
    6            | var-declaration

    7 var-declaration: TYPE ID ';'

    8 $@1: %empty

    9 function-definition: TYPE ID $@1 '(' parameters ')' compound-stmt

   10 parameters: parameter-list
   11           | %empty

   12 parameter-list: parameter-declaration
   13               | parameter-list ',' parameter-declaration

   14 parameter-declaration: TYPE ID

   15 $@2: %empty

   16 compound-stmt: '{' $@2 local-decls-stmts '}'

   17 local-decls-stmts: stmts
   18                  | %empty

   19 stmts: stmts stmt
   20      | stmt
   21      | error

   22 stmt: io-stmt
   23     | return-stmt
   24     | compound-stmt
   25     | if-stmt
   26     | for-stmt
   27     | expression-stmt
   28     | forall-stmt
   29     | var-declaration

   30 io-stmt: READ '(' expression ')' ';'
   31        | WRITE '(' expression ')' ';'
   32        | WRITELN '(' expression ')' ';'

   33 if-stmt: IF condition stmt
   34        | IF condition stmt ELSE stmt

   35 condition: '(' expression ')'

   36 for-stmt: FOR for-conditions stmt

   37 for-conditions: '(' expression ';' expression ';' expression ')'

   38 return-stmt: RETURN expression ';'

   39 forall-stmt: FORALL '(' in-exp ')' compound-stmt
   40            | FORALL '(' in-exp ')' expression-stmt

   41 expression-stmt: expression ';'
   42                | ';'

   43 expression: assign-exp
   44           | expression ',' assign-exp

   45 assign-exp: basic-exp
   46           | basic-exp EQ assign-exp

   47 in-exp: expression IN in-exp
   48       | expression

   49 basic-exp: logical-eq
   50          | basic-exp OR logical-eq
   51          | basic-exp AND logical-eq

   52 logical-eq: logical-exp
   53           | logical-eq NEQ_TO logical-exp
   54           | logical-eq EQ_TO logical-exp

   55 logical-exp: add-exp
   56            | logical-exp GT add-exp
   57            | logical-exp GTE add-exp
   58            | logical-exp LT add-exp
   59            | logical-exp LTE add-exp

   60 add-exp: term
   61        | add-exp MINUS term
   62        | add-exp PLUS term

   63 term: not
   64     | term DIV not
   65     | term MULT not

   66 not: factor
   67    | NOT factor

   68 factor: '(' expression ')'
   69       | ID
   70       | constant
   71       | call
   72       | set-exp

   73 set-exp: ADD '(' in-exp ')'
   74        | REMOVE '(' in-exp ')'
   75        | EXISTS '(' in-exp ')'
   76        | IS_SET '(' in-exp ')'

   77 constant: INTEGER_CONST
   78         | FLOAT_CONST
   79         | EMPTY_CONST
   80         | STRING
   81         | CHAR

   82 call: ID '(' arg-list ')'
   83     | ID '(' ')'

   84 arg-list: assign-exp
   85         | arg-list ',' assign-exp


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 9 30 31 32 35 37 39 40 68 73 74 75 76 82 83
    ')' (41) 9 30 31 32 35 37 39 40 68 73 74 75 76 82 83
    ',' (44) 13 44 85
    ';' (59) 7 30 31 32 37 38 41 42
    '{' (123) 16
    '}' (125) 16
    error (256) 21
    THEN (258)
    ID <str> (259) 7 9 14 69 82 83
    STRING <str> (260) 80
    INTEGER_CONST <str> (261) 77
    FLOAT_CONST <str> (262) 78
    EMPTY_CONST <str> (263) 79
    CHAR <str> (264) 81
    PLUS <str> (265) 62
    MINUS <str> (266) 61
    DIV <str> (267) 64
    MULT <str> (268) 65
    EQ <str> (269) 46
    NOT <str> (270) 67
    OR <str> (271) 50
    AND <str> (272) 51
    EQ_TO <str> (273) 54
    NEQ_TO <str> (274) 53
    GT <str> (275) 56
    LT <str> (276) 58
    GTE <str> (277) 57
    LTE <str> (278) 59
    TYPE <str> (279) 7 9 14
    IN <str> (280) 47
    IF (281) 33 34
    ELSE (282) 34
    FOR (283) 36
    FORALL (284) 39 40
    IS_SET (285) 76
    ADD (286) 73
    REMOVE (287) 74
    RETURN (288) 38
    EXISTS (289) 75
    READ (290) 30
    WRITE (291) 31
    WRITELN (292) 32


Não terminais com as regras onde eles aparecem

    $accept (44)
        à esquerda: 0
    begin <node> (45)
        à esquerda: 1
        à direita: 0
    program <node> (46)
        à esquerda: 2
        à direita: 1
    declaration-list <node> (47)
        à esquerda: 3 4
        à direita: 2 3
    declaration <node> (48)
        à esquerda: 5 6
        à direita: 3 4
    var-declaration <node> (49)
        à esquerda: 7
        à direita: 6 29
    function-definition <node> (50)
        à esquerda: 9
        à direita: 5
    $@1 (51)
        à esquerda: 8
        à direita: 9
    parameters <node> (52)
        à esquerda: 10 11
        à direita: 9
    parameter-list <node> (53)
        à esquerda: 12 13
        à direita: 10 13
    parameter-declaration <node> (54)
        à esquerda: 14
        à direita: 12 13
    compound-stmt <node> (55)
        à esquerda: 16
        à direita: 9 24 39
    $@2 (56)
        à esquerda: 15
        à direita: 16
    local-decls-stmts <node> (57)
        à esquerda: 17 18
        à direita: 16
    stmts <node> (58)
        à esquerda: 19 20 21
        à direita: 17 19
    stmt <node> (59)
        à esquerda: 22 23 24 25 26 27 28 29
        à direita: 19 20 33 34 36
    io-stmt <node> (60)
        à esquerda: 30 31 32
        à direita: 22
    if-stmt <node> (61)
        à esquerda: 33 34
        à direita: 25
    condition <node> (62)
        à esquerda: 35
        à direita: 33 34
    for-stmt <node> (63)
        à esquerda: 36
        à direita: 26
    for-conditions <node> (64)
        à esquerda: 37
        à direita: 36
    return-stmt <node> (65)
        à esquerda: 38
        à direita: 23
    forall-stmt <node> (66)
        à esquerda: 39 40
        à direita: 28
    expression-stmt <node> (67)
        à esquerda: 41 42
        à direita: 27 40
    expression <node> (68)
        à esquerda: 43 44
        à direita: 30 31 32 35 37 38 41 44 47 48 68
    assign-exp <node> (69)
        à esquerda: 45 46
        à direita: 43 44 46 84 85
    in-exp <node> (70)
        à esquerda: 47 48
        à direita: 39 40 47 73 74 75 76
    basic-exp <node> (71)
        à esquerda: 49 50 51
        à direita: 45 46 50 51
    logical-eq <node> (72)
        à esquerda: 52 53 54
        à direita: 49 50 51 53 54
    logical-exp <node> (73)
        à esquerda: 55 56 57 58 59
        à direita: 52 53 54 56 57 58 59
    add-exp <node> (74)
        à esquerda: 60 61 62
        à direita: 55 56 57 58 59 61 62
    term <node> (75)
        à esquerda: 63 64 65
        à direita: 60 61 62 64 65
    not <node> (76)
        à esquerda: 66 67
        à direita: 63 64 65
    factor <node> (77)
        à esquerda: 68 69 70 71 72
        à direita: 66 67
    set-exp <node> (78)
        à esquerda: 73 74 75 76
        à direita: 72
    constant <node> (79)
        à esquerda: 77 78 79 80 81
        à direita: 70
    call <node> (80)
        à esquerda: 82 83
        à direita: 71
    arg-list <node> (81)
        à esquerda: 84 85
        à direita: 82 85


Estado 0

    0 $accept: • begin $end

    TYPE  deslocar, e ir ao estado 1

    begin                ir ao estado 2
    program              ir ao estado 3
    declaration-list     ir ao estado 4
    declaration          ir ao estado 5
    var-declaration      ir ao estado 6
    function-definition  ir ao estado 7


Estado 1

    7 var-declaration: TYPE • ID ';'
    9 function-definition: TYPE • ID $@1 '(' parameters ')' compound-stmt

    ID  deslocar, e ir ao estado 8


Estado 2

    0 $accept: begin • $end

    $end  deslocar, e ir ao estado 9


Estado 3

    1 begin: program •

    $padrão  reduzir usando a regra 1 (begin)


Estado 4

    2 program: declaration-list •
    3 declaration-list: declaration-list • declaration

    TYPE  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 2 (program)

    declaration          ir ao estado 10
    var-declaration      ir ao estado 6
    function-definition  ir ao estado 7


Estado 5

    4 declaration-list: declaration •

    $padrão  reduzir usando a regra 4 (declaration-list)


Estado 6

    6 declaration: var-declaration •

    $padrão  reduzir usando a regra 6 (declaration)


Estado 7

    5 declaration: function-definition •

    $padrão  reduzir usando a regra 5 (declaration)


Estado 8

    7 var-declaration: TYPE ID • ';'
    9 function-definition: TYPE ID • $@1 '(' parameters ')' compound-stmt

    ';'  deslocar, e ir ao estado 11

    $padrão  reduzir usando a regra 8 ($@1)

    $@1  ir ao estado 12


Estado 9

    0 $accept: begin $end •

    $padrão  aceitar


Estado 10

    3 declaration-list: declaration-list declaration •

    $padrão  reduzir usando a regra 3 (declaration-list)


Estado 11

    7 var-declaration: TYPE ID ';' •

    $padrão  reduzir usando a regra 7 (var-declaration)


Estado 12

    9 function-definition: TYPE ID $@1 • '(' parameters ')' compound-stmt

    '('  deslocar, e ir ao estado 13


Estado 13

    9 function-definition: TYPE ID $@1 '(' • parameters ')' compound-stmt

    TYPE  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 11 (parameters)

    parameters             ir ao estado 15
    parameter-list         ir ao estado 16
    parameter-declaration  ir ao estado 17


Estado 14

   14 parameter-declaration: TYPE • ID

    ID  deslocar, e ir ao estado 18


Estado 15

    9 function-definition: TYPE ID $@1 '(' parameters • ')' compound-stmt

    ')'  deslocar, e ir ao estado 19


Estado 16

   10 parameters: parameter-list •
   13 parameter-list: parameter-list • ',' parameter-declaration

    ','  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 10 (parameters)


Estado 17

   12 parameter-list: parameter-declaration •

    $padrão  reduzir usando a regra 12 (parameter-list)


Estado 18

   14 parameter-declaration: TYPE ID •

    $padrão  reduzir usando a regra 14 (parameter-declaration)


Estado 19

    9 function-definition: TYPE ID $@1 '(' parameters ')' • compound-stmt

    '{'  deslocar, e ir ao estado 21

    compound-stmt  ir ao estado 22


Estado 20

   13 parameter-list: parameter-list ',' • parameter-declaration

    TYPE  deslocar, e ir ao estado 14

    parameter-declaration  ir ao estado 23


Estado 21

   16 compound-stmt: '{' • $@2 local-decls-stmts '}'

    $padrão  reduzir usando a regra 15 ($@2)

    $@2  ir ao estado 24


Estado 22

    9 function-definition: TYPE ID $@1 '(' parameters ')' compound-stmt •

    $padrão  reduzir usando a regra 9 (function-definition)


Estado 23

   13 parameter-list: parameter-list ',' parameter-declaration •

    $padrão  reduzir usando a regra 13 (parameter-list)


Estado 24

   16 compound-stmt: '{' $@2 • local-decls-stmts '}'

    error          deslocar, e ir ao estado 25
    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    TYPE           deslocar, e ir ao estado 33
    '('            deslocar, e ir ao estado 34
    '{'            deslocar, e ir ao estado 21
    ';'            deslocar, e ir ao estado 35
    IF             deslocar, e ir ao estado 36
    FOR            deslocar, e ir ao estado 37
    FORALL         deslocar, e ir ao estado 38
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    RETURN         deslocar, e ir ao estado 42
    EXISTS         deslocar, e ir ao estado 43
    READ           deslocar, e ir ao estado 44
    WRITE          deslocar, e ir ao estado 45
    WRITELN        deslocar, e ir ao estado 46

    '}'  reduzir usando a regra 18 (local-decls-stmts)

    var-declaration    ir ao estado 47
    compound-stmt      ir ao estado 48
    local-decls-stmts  ir ao estado 49
    stmts              ir ao estado 50
    stmt               ir ao estado 51
    io-stmt            ir ao estado 52
    if-stmt            ir ao estado 53
    for-stmt           ir ao estado 54
    return-stmt        ir ao estado 55
    forall-stmt        ir ao estado 56
    expression-stmt    ir ao estado 57
    expression         ir ao estado 58
    assign-exp         ir ao estado 59
    basic-exp          ir ao estado 60
    logical-eq         ir ao estado 61
    logical-exp        ir ao estado 62
    add-exp            ir ao estado 63
    term               ir ao estado 64
    not                ir ao estado 65
    factor             ir ao estado 66
    set-exp            ir ao estado 67
    constant           ir ao estado 68
    call               ir ao estado 69


Estado 25

   21 stmts: error •

    $padrão  reduzir usando a regra 21 (stmts)


Estado 26

   69 factor: ID •
   82 call: ID • '(' arg-list ')'
   83     | ID • '(' ')'

    '('  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 69 (factor)


Estado 27

   80 constant: STRING •

    $padrão  reduzir usando a regra 80 (constant)


Estado 28

   77 constant: INTEGER_CONST •

    $padrão  reduzir usando a regra 77 (constant)


Estado 29

   78 constant: FLOAT_CONST •

    $padrão  reduzir usando a regra 78 (constant)


Estado 30

   79 constant: EMPTY_CONST •

    $padrão  reduzir usando a regra 79 (constant)


Estado 31

   81 constant: CHAR •

    $padrão  reduzir usando a regra 81 (constant)


Estado 32

   67 not: NOT • factor

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    factor    ir ao estado 71
    set-exp   ir ao estado 67
    constant  ir ao estado 68
    call      ir ao estado 69


Estado 33

    7 var-declaration: TYPE • ID ';'

    ID  deslocar, e ir ao estado 72


Estado 34

   68 factor: '(' • expression ')'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 73
    assign-exp   ir ao estado 59
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 35

   42 expression-stmt: ';' •

    $padrão  reduzir usando a regra 42 (expression-stmt)


Estado 36

   33 if-stmt: IF • condition stmt
   34        | IF • condition stmt ELSE stmt

    '('  deslocar, e ir ao estado 74

    condition  ir ao estado 75


Estado 37

   36 for-stmt: FOR • for-conditions stmt

    '('  deslocar, e ir ao estado 76

    for-conditions  ir ao estado 77


Estado 38

   39 forall-stmt: FORALL • '(' in-exp ')' compound-stmt
   40            | FORALL • '(' in-exp ')' expression-stmt

    '('  deslocar, e ir ao estado 78


Estado 39

   76 set-exp: IS_SET • '(' in-exp ')'

    '('  deslocar, e ir ao estado 79


Estado 40

   73 set-exp: ADD • '(' in-exp ')'

    '('  deslocar, e ir ao estado 80


Estado 41

   74 set-exp: REMOVE • '(' in-exp ')'

    '('  deslocar, e ir ao estado 81


Estado 42

   38 return-stmt: RETURN • expression ';'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 82
    assign-exp   ir ao estado 59
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 43

   75 set-exp: EXISTS • '(' in-exp ')'

    '('  deslocar, e ir ao estado 83


Estado 44

   30 io-stmt: READ • '(' expression ')' ';'

    '('  deslocar, e ir ao estado 84


Estado 45

   31 io-stmt: WRITE • '(' expression ')' ';'

    '('  deslocar, e ir ao estado 85


Estado 46

   32 io-stmt: WRITELN • '(' expression ')' ';'

    '('  deslocar, e ir ao estado 86


Estado 47

   29 stmt: var-declaration •

    $padrão  reduzir usando a regra 29 (stmt)


Estado 48

   24 stmt: compound-stmt •

    $padrão  reduzir usando a regra 24 (stmt)


Estado 49

   16 compound-stmt: '{' $@2 local-decls-stmts • '}'

    '}'  deslocar, e ir ao estado 87


Estado 50

   17 local-decls-stmts: stmts •
   19 stmts: stmts • stmt

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    TYPE           deslocar, e ir ao estado 33
    '('            deslocar, e ir ao estado 34
    '{'            deslocar, e ir ao estado 21
    ';'            deslocar, e ir ao estado 35
    IF             deslocar, e ir ao estado 36
    FOR            deslocar, e ir ao estado 37
    FORALL         deslocar, e ir ao estado 38
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    RETURN         deslocar, e ir ao estado 42
    EXISTS         deslocar, e ir ao estado 43
    READ           deslocar, e ir ao estado 44
    WRITE          deslocar, e ir ao estado 45
    WRITELN        deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 17 (local-decls-stmts)

    var-declaration  ir ao estado 47
    compound-stmt    ir ao estado 48
    stmt             ir ao estado 88
    io-stmt          ir ao estado 52
    if-stmt          ir ao estado 53
    for-stmt         ir ao estado 54
    return-stmt      ir ao estado 55
    forall-stmt      ir ao estado 56
    expression-stmt  ir ao estado 57
    expression       ir ao estado 58
    assign-exp       ir ao estado 59
    basic-exp        ir ao estado 60
    logical-eq       ir ao estado 61
    logical-exp      ir ao estado 62
    add-exp          ir ao estado 63
    term             ir ao estado 64
    not              ir ao estado 65
    factor           ir ao estado 66
    set-exp          ir ao estado 67
    constant         ir ao estado 68
    call             ir ao estado 69


Estado 51

   20 stmts: stmt •

    $padrão  reduzir usando a regra 20 (stmts)


Estado 52

   22 stmt: io-stmt •

    $padrão  reduzir usando a regra 22 (stmt)


Estado 53

   25 stmt: if-stmt •

    $padrão  reduzir usando a regra 25 (stmt)


Estado 54

   26 stmt: for-stmt •

    $padrão  reduzir usando a regra 26 (stmt)


Estado 55

   23 stmt: return-stmt •

    $padrão  reduzir usando a regra 23 (stmt)


Estado 56

   28 stmt: forall-stmt •

    $padrão  reduzir usando a regra 28 (stmt)


Estado 57

   27 stmt: expression-stmt •

    $padrão  reduzir usando a regra 27 (stmt)


Estado 58

   41 expression-stmt: expression • ';'
   44 expression: expression • ',' assign-exp

    ';'  deslocar, e ir ao estado 89
    ','  deslocar, e ir ao estado 90


Estado 59

   43 expression: assign-exp •

    $padrão  reduzir usando a regra 43 (expression)


Estado 60

   45 assign-exp: basic-exp •
   46           | basic-exp • EQ assign-exp
   50 basic-exp: basic-exp • OR logical-eq
   51          | basic-exp • AND logical-eq

    EQ   deslocar, e ir ao estado 91
    OR   deslocar, e ir ao estado 92
    AND  deslocar, e ir ao estado 93

    $padrão  reduzir usando a regra 45 (assign-exp)


Estado 61

   49 basic-exp: logical-eq •
   53 logical-eq: logical-eq • NEQ_TO logical-exp
   54           | logical-eq • EQ_TO logical-exp

    EQ_TO   deslocar, e ir ao estado 94
    NEQ_TO  deslocar, e ir ao estado 95

    $padrão  reduzir usando a regra 49 (basic-exp)


Estado 62

   52 logical-eq: logical-exp •
   56 logical-exp: logical-exp • GT add-exp
   57            | logical-exp • GTE add-exp
   58            | logical-exp • LT add-exp
   59            | logical-exp • LTE add-exp

    GT   deslocar, e ir ao estado 96
    LT   deslocar, e ir ao estado 97
    GTE  deslocar, e ir ao estado 98
    LTE  deslocar, e ir ao estado 99

    $padrão  reduzir usando a regra 52 (logical-eq)


Estado 63

   55 logical-exp: add-exp •
   61 add-exp: add-exp • MINUS term
   62        | add-exp • PLUS term

    PLUS   deslocar, e ir ao estado 100
    MINUS  deslocar, e ir ao estado 101

    $padrão  reduzir usando a regra 55 (logical-exp)


Estado 64

   60 add-exp: term •
   64 term: term • DIV not
   65     | term • MULT not

    DIV   deslocar, e ir ao estado 102
    MULT  deslocar, e ir ao estado 103

    $padrão  reduzir usando a regra 60 (add-exp)


Estado 65

   63 term: not •

    $padrão  reduzir usando a regra 63 (term)


Estado 66

   66 not: factor •

    $padrão  reduzir usando a regra 66 (not)


Estado 67

   72 factor: set-exp •

    $padrão  reduzir usando a regra 72 (factor)


Estado 68

   70 factor: constant •

    $padrão  reduzir usando a regra 70 (factor)


Estado 69

   71 factor: call •

    $padrão  reduzir usando a regra 71 (factor)


Estado 70

   82 call: ID '(' • arg-list ')'
   83     | ID '(' • ')'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    ')'            deslocar, e ir ao estado 104
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    assign-exp   ir ao estado 105
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69
    arg-list     ir ao estado 106


Estado 71

   67 not: NOT factor •

    $padrão  reduzir usando a regra 67 (not)


Estado 72

    7 var-declaration: TYPE ID • ';'

    ';'  deslocar, e ir ao estado 11


Estado 73

   44 expression: expression • ',' assign-exp
   68 factor: '(' expression • ')'

    ')'  deslocar, e ir ao estado 107
    ','  deslocar, e ir ao estado 90


Estado 74

   35 condition: '(' • expression ')'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 108
    assign-exp   ir ao estado 59
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 75

   33 if-stmt: IF condition • stmt
   34        | IF condition • stmt ELSE stmt

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    TYPE           deslocar, e ir ao estado 33
    '('            deslocar, e ir ao estado 34
    '{'            deslocar, e ir ao estado 21
    ';'            deslocar, e ir ao estado 35
    IF             deslocar, e ir ao estado 36
    FOR            deslocar, e ir ao estado 37
    FORALL         deslocar, e ir ao estado 38
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    RETURN         deslocar, e ir ao estado 42
    EXISTS         deslocar, e ir ao estado 43
    READ           deslocar, e ir ao estado 44
    WRITE          deslocar, e ir ao estado 45
    WRITELN        deslocar, e ir ao estado 46

    var-declaration  ir ao estado 47
    compound-stmt    ir ao estado 48
    stmt             ir ao estado 109
    io-stmt          ir ao estado 52
    if-stmt          ir ao estado 53
    for-stmt         ir ao estado 54
    return-stmt      ir ao estado 55
    forall-stmt      ir ao estado 56
    expression-stmt  ir ao estado 57
    expression       ir ao estado 58
    assign-exp       ir ao estado 59
    basic-exp        ir ao estado 60
    logical-eq       ir ao estado 61
    logical-exp      ir ao estado 62
    add-exp          ir ao estado 63
    term             ir ao estado 64
    not              ir ao estado 65
    factor           ir ao estado 66
    set-exp          ir ao estado 67
    constant         ir ao estado 68
    call             ir ao estado 69


Estado 76

   37 for-conditions: '(' • expression ';' expression ';' expression ')'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 110
    assign-exp   ir ao estado 59
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 77

   36 for-stmt: FOR for-conditions • stmt

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    TYPE           deslocar, e ir ao estado 33
    '('            deslocar, e ir ao estado 34
    '{'            deslocar, e ir ao estado 21
    ';'            deslocar, e ir ao estado 35
    IF             deslocar, e ir ao estado 36
    FOR            deslocar, e ir ao estado 37
    FORALL         deslocar, e ir ao estado 38
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    RETURN         deslocar, e ir ao estado 42
    EXISTS         deslocar, e ir ao estado 43
    READ           deslocar, e ir ao estado 44
    WRITE          deslocar, e ir ao estado 45
    WRITELN        deslocar, e ir ao estado 46

    var-declaration  ir ao estado 47
    compound-stmt    ir ao estado 48
    stmt             ir ao estado 111
    io-stmt          ir ao estado 52
    if-stmt          ir ao estado 53
    for-stmt         ir ao estado 54
    return-stmt      ir ao estado 55
    forall-stmt      ir ao estado 56
    expression-stmt  ir ao estado 57
    expression       ir ao estado 58
    assign-exp       ir ao estado 59
    basic-exp        ir ao estado 60
    logical-eq       ir ao estado 61
    logical-exp      ir ao estado 62
    add-exp          ir ao estado 63
    term             ir ao estado 64
    not              ir ao estado 65
    factor           ir ao estado 66
    set-exp          ir ao estado 67
    constant         ir ao estado 68
    call             ir ao estado 69


Estado 78

   39 forall-stmt: FORALL '(' • in-exp ')' compound-stmt
   40            | FORALL '(' • in-exp ')' expression-stmt

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 112
    assign-exp   ir ao estado 59
    in-exp       ir ao estado 113
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 79

   76 set-exp: IS_SET '(' • in-exp ')'

    ID             deslocar, e ir ao estado 26
    STRING         deslocar, e ir ao estado 27
    INTEGER_CONST  deslocar, e ir ao estado 28
    FLOAT_CONST    deslocar, e ir ao estado 29
    EMPTY_CONST    deslocar, e ir ao estado 30
    CHAR           deslocar, e ir ao estado 31
    NOT            deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 34
    IS_SET         deslocar, e ir ao estado 39
    ADD            deslocar, e ir ao estado 40
    REMOVE         deslocar, e ir ao estado 41
    EXISTS         deslocar, e ir ao estado 43

    expression   ir ao estado 112
    assign-exp   ir ao estado 59
    in-exp       ir ao estado 114
    basic-exp    ir ao estado 60
    logical-eq   ir ao estado 61
    logical-exp  ir ao estado 62
    add-exp      ir ao estado 63
    term         ir ao estado 64
    not          ir ao estado 65
    factor       ir ao estado 66
    set-exp      ir ao estado 67
    constant     ir ao estado 68
    call         ir ao estado 69


Estado 80

   73 set-exp: ADD '(' • in-exp ')'
